# react-native-fast-opencv

./: .gitignore  .yarnrc.yml  CONTRIBUTING.md  FastOpencv.podspec  LICENSE  README.md  lefthook.yml  package-lock.json  package.json  react-native-fast-opencv.podspec  tsconfig.json
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  nextjs.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/fastopencv/: FastOpencvModule.kt  FastOpencvPackage.kt
android/src/newarch/: FastOpencvSpec.kt
android/src/oldarch/: FastOpencvSpec.kt
cpp/: ConvertImage.cpp  ConvertImage.hpp  FOCV_Function.cpp  FOCV_Function.hpp  FOCV_FunctionArguments.cpp  FOCV_FunctionArguments.hpp  FOCV_Ids.cpp  FOCV_Ids.hpp  FOCV_JsiObject.cpp  FOCV_JsiObject.hpp  FOCV_JsiWrapper.hpp  FOCV_Mat.cpp  FOCV_Mat.hpp  FOCV_Object.cpp  FOCV_Object.hpp  FOCV_PointsGroup.cpp  FOCV_PointsGroup.hpp  FOCV_Rect.cpp  FOCV_Rect.hpp  FOCV_Storage.cpp  FOCV_Storage.hpp  FOCV_StoredObject.cpp  FOCV_StoredObject.hpp  UUID.cpp  UUID.hpp  react-native-fast-opencv.cpp  react-native-fast-opencv.h
cpp/delegates/: DelegateRegistry.cpp  DelegateRegistry.h  TypeDelegate.hpp
cpp/jsi/: Promise.cpp  Promise.h  TypedArray.cpp  TypedArray.h
cpp/structures/dMatchVector/: DMatchVectorDelegate.cpp  DMatchVectorDelegate.h
cpp/structures/dMatchVectorVector/: DMatchVectorVectorDelegate.cpp  DMatchVectorVectorDelegate.h
cpp/structures/keyPointVector/: KeyPointVectorDelegate.cpp  KeyPointVectorDelegate.h
cpp/structures/mat/: MatDelegate.cpp  MatDelegate.h  MatFactory.cpp  MatFactory.h
cpp/structures/matVector/: MatVectorDelegate.cpp  MatVectorDelegate.h  MatVectorFactory.cpp  MatVectorFactory.h
cpp/structures/point/: PointDelegate.cpp  PointDelegate.h  PointFactory.cpp  PointFactory.h
cpp/structures/point2f/: Point2fDelegate.h  Point2fFactory.cpp  Point2fFactory.h  PointDelegate.cpp
cpp/structures/point2fVector/: Point2fVectorDelegate.cpp  Point2fVectorDelegate.h  Point2fVectorFactory.cpp  Point2fVectorFactory.h
cpp/structures/pointVector/: PointVectorDelegate.cpp  PointVectorDelegate.h  PointVectorFactory.cpp  PointVectorFactory.h
cpp/structures/pointVectorVector/: PointVectorVectorDelegate.cpp  PointVectorVectorDelegate.h  PointVectorVectorFactory.cpp  PointVectorVectorFactory.h
cpp/structures/rect/: RectDelegate.cpp  RectDelegate.h  RectFactory.cpp  RectFactory.h
cpp/structures/rectVector/: RectVectorDelegate.cpp  RectVectorDelegate.h  RectVectorFactory.cpp  RectVectorFactory.h
cpp/utils/: hashString.hpp
docs/: error.html  next.config.js  next.config.mjs  package.json  theme.config.jsx
docs/app/: layout.jsx
docs/content/: _meta.js  apidetails.md  availablefunctions.md  customized.md  index.md  installation.md  migration.md  usage.md
docs/pages/: _meta.json  apidetails.md  availablefunctions.md  customized.md  index.md  installation.md  usage.md
example/: app.json  babel.config.js  metro.config.js  package.json  vite.config.mjs
example/android/: settings.gradle
example/ios/: .xcode.env.local  AppDelegate.swift  File.swift  Podfile
example/src/: App.tsx  ImageExample.tsx  VisionCameraExample.tsx  types.ts
ios/: FastOpencv.h  FastOpencv.mm
src/: NativeFastOpencv.ts  index.tsx
src/constants/: ColorConversionsCodes.ts  Core.ts  DataTypes.ts  FeatureMatching.ts  ImageProcessing.ts  ImageTransform.ts
src/functions/: ColorConversion.ts  Core.ts  ImageProcessing.ts
src/objects/: ObjectType.ts  Objects.ts
src/utils/: UtilsFunctions.ts  base64.ts  file.ts
(+61 files in other folders)
